--- a/src/components/Buttons/Buttons.css
+++ b/src/components/Buttons/Buttons.css
@@ -16,6 +16,11 @@
   border-radius: 25px;
   cursor: pointer;
 }
+.button-results:active,
+.button-reset:active {
+  transform: scale(0.9);
+  transition: 0.2s;
+}
 
 .button-reset {
   background-color: #ffb02e;
